test/release/examples/spec/Classes/usedBeforeInitialized.good
usedBeforeInitialized.chpl:4: In initializer:
usedBeforeInitialized.chpl:5: error: field "x" used before it is initialized
